--- a/npkpir_23/web/wspolny/sub/srodkitrwale/sprzedane.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitrwale/sprzedane.xhtml
@@ -16,7 +16,7 @@
                 </p:contextMenu>
                 <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.sprzedane}" id="srodkiListas" editable="true" 
                               scrollable="true" scrollHeight="390"
-                              style="max-width: 1400px;"
+                              style="max-width: 1550px;max-height: 590px;"
                               rowKey="#{wpis.id}" selection="#{sTRTabView.wybranysrodektrwalySprzedane}" selectionMode="single"> 
 
                     <f:facet name="header">  
