--- a/npkpir_23/web/wspolny/sub/srodkitrwale/umorzenia_100.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitrwale/umorzenia_100.xhtml
@@ -12,7 +12,7 @@
             <p:tab id="zestawieniestr5" title="umorzone w 100%">
                 <h:form id="str_umorzenia_100">
                 <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.planUmorzen_100}" id="srodkiLista5" editable="true" 
-                              style="width: 1200px; overflow-y: scroll; height: 390px;" emptyMessage="Nie naliczono umorzeń"
+                              style="width: 1200px; overflow-y: scroll; max-height: 590px;" emptyMessage="Nie naliczono umorzeń"
                               rowKey="#{wpis.id}" selectionMode="single"> 
 
                     <f:facet name="header">  
@@ -27,7 +27,7 @@
                         <h:outputText value="#{wpis.nrsrodka}"/>
                     </p:column>
                     <p:column id="data2Column" headerText="data przekazania" filterBy="#{wpis.dataprzek}" filterMatchMode="contains" 
-                              filterStyle="display : none;" sortBy="#{wpis.dataprzek}" style="width: 70px; text-align: center;">  
+                              filterStyle="display : none;" sortBy="#{wpis.dataprzek}" style="width: 80px; text-align: center;">  
 
                         <h:outputText value="#{wpis.dataprzek}">
                             <f:convertDateTime dateStyle="medium"  />
