--- a/npkpir_23/web/wspolny/sub/srodkitrwale/umorzenia_plan.xhtml
+++ b/npkpir_23/web/wspolny/sub/srodkitrwale/umorzenia_plan.xhtml
@@ -12,7 +12,7 @@
             <p:tab id="zestawieniestr1Plan" title="umorzenia plan">
                 <h:form id="str_umorzeniaPlan">
                     <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.posiadane}" id="srodkiLista1Plan" editable="true" 
-                              style="width: 1400px; overflow-y: scroll; height: 390px;" emptyMessage="Nie naliczono umorzeń"
+                              style="width: 1550px; overflow-y: scroll; max-height: 590px;" emptyMessage="Nie naliczono umorzeń"
                               rowKey="#{wpis.id}" selectionMode="single"  sortBy="#{wpis.podatnik}"> 
 
                     <f:facet name="header">  
@@ -27,7 +27,7 @@
                         <h:outputText value="#{wpis.nrsrodka}"/>
                     </p:column>
                     <p:column id="data2Column" headerText="data przekazania" filterBy="#{wpis.dataprzek}" filterMatchMode="contains" 
-                              filterStyle="display : none;" sortBy="#{wpis.dataprzek}" style="width: 70px; text-align: center;">  
+                              filterStyle="display : none;" sortBy="#{wpis.dataprzek}" style="width: 80px; text-align: center;">  
 
                         <h:outputText value="#{wpis.dataprzek}">
                             <f:convertDateTime dateStyle="medium"  />
