--- a/npkpir_23/web/wspolny/sub/wyposazenie.xhtml
+++ b/npkpir_23/web/wspolny/sub/wyposazenie.xhtml
@@ -4,12 +4,11 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:ft="http://primefaces.prime.com.tr/facestrace">
+    xmlns:ft="http://primefaces.prime.com.tr/facestrace"
+    xmlns:bcf="http://brzaskun.com/facelets">
     <p:outputPanel id="wrapperwyposazenie" deferred="true">
-        <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.listaWyposazenia}" id="srodkiLista" editable="true" 
-                      paginator="true" paginatorAlwaysVisible="true" rows="6"
-                      paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
-                      rowsPerPageTemplate="6,12,18,24,32,50" 
+        <p:dataTable lazy="false"   var="wpis" value="#{sTRTabView.wyposazenie}" id="srodkiLista" editable="true" 
+                      style="width: 1300px; overflow-y: scroll; max-height: 590px;"
                       rowKey="#{wpis.id}" selectionMode="single"> 
 
             <f:facet name="header">  
@@ -21,7 +20,7 @@
                 <h:outputText value="#{wpis.nrsrodka}" />
             </p:column>
 
-            <p:column id="dataColumn" headerText="data zak" filterBy="#{wpis.datazak}" filterMatchMode="contains" sortBy="#{wpis.datazak}" >  
+            <p:column id="dataColumn" headerText="data zak" filterBy="#{wpis.datazak}" filterMatchMode="contains" sortBy="#{wpis.datazak}" sortOrder="descending" sortPriority="1">  
 
                 <h:outputText value="#{wpis.datazak}">
                     <f:convertDateTime dateStyle="medium"  />
@@ -33,7 +32,7 @@
                     <f:convertDateTime dateStyle="medium"  />
                 </h:outputText>
             </p:column>
-            <p:column id="nazwaColumn" headerText="nazwa" filterBy="#{wpis.nazwa}" filterMatchMode="contains" sortBy="#{wpis.nazwa}">  
+            <p:column id="nazwaColumn" headerText="nazwa" width="250" filterBy="#{wpis.nazwa}" filterMatchMode="contains" sortBy="#{wpis.nazwa}">  
 
                 <h:outputText value="#{wpis.nazwa}"  />
             </p:column>
@@ -43,42 +42,23 @@
             </p:column>
             <p:column id="rodzTrColumn" headerText="#{mgs.kwota}" filterBy="#{wpis.netto}" filterMatchMode="contains" sortBy="#{wpis.netto}">  
 
-                <h:outputText value="#{wpis.netto}">
-                    <f:convertNumber maxFractionDigits="2"
-                                     groupingUsed="true"
-                                     currencySymbol="zł"
-                                     maxIntegerDigits="7"
-                                     type="currency"/>
-                </h:outputText>
+                <bcf:outputpl value="#{wpis.netto}"/>
             </p:column>
             <p:column id="vatColumn" headerText="#{mgs.VAT}" filterBy="#{wpis.vat}" filterMatchMode="contains" sortBy="#{wpis.vat}">  
 
-                <h:outputText value="#{wpis.vat}" >
-                    <f:convertNumber maxFractionDigits="2"
-                                     groupingUsed="true"
-                                     currencySymbol="zł"
-                                     maxIntegerDigits="7"
-                                     type="currency"/>
-                </h:outputText>
+                <bcf:outputpl value="#{wpis.vat}"/>
             </p:column>
             <p:column id="stawkaColumn" headerText="odpis stawka" filterBy="#{wpis.stawka}" filterMatchMode="contains" sortBy="#{wpis.stawka}">  
 
-                <h:outputText value="#{wpis.stawka}%" >
-                    <f:convertNumber maxFractionDigits="2"
-                                     groupingUsed="true"
-                                     maxIntegerDigits="5"
-                                     type="number"/>
-                </h:outputText>
+                <bcf:outputpl0 value="#{wpis.stawka}"/>
             </p:column>
             <p:column id="odpisrokColumn" headerText="odpis rok" filterBy="#{wpis.odpisrok}" filterMatchMode="contains" sortBy="#{wpis.odpisrok}">  
-
-                <h:outputText value="#{wpis.odpisrok}" >
-                    <f:convertNumber maxFractionDigits="2"
-                                     groupingUsed="true"
-                                     currencySymbol="zł"
-                                     maxIntegerDigits="7"
-                                     type="currency"/>
-                </h:outputText>
+            <bcf:outputpl value="#{wpis.odpisrok}"/>
+                          </p:column>
+            <p:column id="deleteColumn" headerText="wycofaj"  style="width: 40px; text-align: center;">
+                <p:commandButton actionListener="#{sTRTabView.destroy(wpis)}" onclick="PF('confirmation').show()" id="delete" 
+                                 icon="ui-icon ui-icon-trash" global="false">
+                </p:commandButton>
             </p:column>
 
         </p:dataTable>
