--- a/npkpir_23/web/wspolny/wspolnyWyposazenie.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyWyposazenie.xhtml
@@ -12,6 +12,23 @@
         <ui:define name="body">
 
               <f:view>
+                   <h:form>
+                    <p:growl life="3600"  id="fifi"/>
+                    <p:dialog id="confirmDialog" 
+                              header="Usunąć wybrany środek trwały?" widgetVar="confirmation" closable="false" resizable="false"> 
+                            <p:panelGrid layout="tabular" columns="2">
+                            <p:commandButton id="confirm" value="Tak, usunąć" update="formSTR" oncomplete="PF('confirmation').hide()"  
+                                             actionListener="#{sTRTabView.destroy2()}" />  
+                            <p:commandButton id="decline" value="Nie usuwać" onclick="PF('confirmation').hide()" type="button" style="margin-left: 60px;"/>   
+                            </p:panelGrid>
+                             <p:panelGrid layout="tabular" columns="2" style="text-align: left;">
+                            <h:selectBooleanCheckbox id="powerusun" value="#{sTRTabView.napewnousunac}" title="napewno usunac" style="float: right; margin-top: 10px; margin-left: 20px;"/>
+                            <h:outputLabel for="powerusun" value="bezwzględne usuwanie" style="float: left; margin-top: 10px;"/>
+                            </p:panelGrid>
+
+                    </p:dialog>  
+                </h:form>
+              
                 <div class="flex flex-column min-h-screen">
                     <!-- panel północny -->
                     <div class="col-12">
