--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -1026,6 +1026,43 @@
                     </p:dataTable>`
                 </h:form>
             </p:tab>
+            <p:tab title="Limit podstawa zus">
+                <h:form id="Limitzus">
+                    <p:panelGrid columns="4">
+                        <p:outputLabel value="rok"/>
+                        <p:inputText value="#{limitzusView.selected.rok}"/>
+                        <p:outputLabel value="limit podstawy składek em/ren Polska"/>
+                        <bcf:inputplid id="pstawka11" value="#{limitzusView.selected.kwota}"/>
+                        <p:panelGrid columns="1">
+                            <p:commandButton value="dodaj" styleClass="buttonnorm" actionListener="#{limitzusView.dodajrok()}" update="akordeon:Limitzus" />
+                        </p:panelGrid>
+                    </p:panelGrid>
+                    <p:dataTable value="#{limitzusView.lista}" var="itemekwiw" rowIndexVar="indexekwiw" rowKey="#{itemekwiw.id}"
+                                 selection="#{limitzusView.selected}" selectionMode="single"  sortBy="#{itemekwiw.rok}"
+                                 scrollable="true" scrollHeight="700" scrollRows="30" 
+                                 style="width: 400px;margin-top: 30px;" emptyMessage="Nie wprowadzono wartości">
+                        <p:ajax event="rowSelect" partialSubmit="true"/>
+                        <p:column width="30" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value=""/>
+                            </f:facet>
+                            <h:outputText value="#{indexekwiw+1}"/>
+                        </p:column>
+                        <p:column width="50" style="text-align: center;" sortBy="#{itemekwiw.rok}">
+                            <f:facet name="header">
+                                <h:outputText value="rok"/>
+                            </f:facet>
+                            <h:outputText value="#{itemekwiw.rok}"/>
+                        </p:column>
+                        <p:column width="50" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value="kwota"/>
+                            </f:facet>
+                            <bcf:outputpl value="#{itemekwiw.kwota}"/>
+                        </p:column>
+                    </p:dataTable>`
+                </h:form>
+            </p:tab>
 
             <p:tab title="Schema świadectwo pracy">
                 <h:form id="Swiadectwo">
