--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importtaxuallyxls.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importtaxuallyxls.xhtml
@@ -15,18 +15,18 @@
         }
     </style>
 
-    <p:dialog id="importamazoncsvnazwy" header="Zestawienie pobranych faktur dla Amazon WNT/WDT tylko NIEMCY" widgetVar="importamazoncsvnazwy" height="900" width="1450"
-              resizable="false"  onShow="ustawdialog('importamazoncsvnazwy','menudokumenty',1450,900);" closeOnEscape="true" onHide="resetujdialog('importamazoncsvnazwy');" >
-        <p:ajax event="open" listener="#{amazonImportNazwy.init()}" update="importtabelanazwy"/>
+    <p:dialog id="importamazonTaxually" header="Zestawienie pobranych faktur dla Amazon WNT/WDT TAXUALLY" widgetVar="importamazonTaxually" height="900" width="1450"
+              resizable="false"  onShow="ustawdialog('importamazonTaxually','menudokumenty',1450,900);" closeOnEscape="true" onHide="resetujdialog('importamazonTaxually');" >
+        <p:ajax event="open" listener="#{amazonTaxually.init()}" update="importtabelataxually"/>
         <bcf:ajaxs/>
-        <h:outputText value="import dokumentów WDT/WNT z pliku XLS AdditionalDataTemplate TYLKO NIEMCY"/>
+        <h:outputText value="import dokumentów WDT/WNT z pliku TAXUALLY"/>
         <h:form>
             <p:growl life="3600"  id="messages1"/>
             <p:panelGrid layout="tabular" columns="2">
                 <p:panelGrid layout="tabular" columns="1">
-                  <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonImportNazwy.importujsprzedaz}"
+                  <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonTaxually.importujsprzedaz}"
                                 mode="advanced" dragDropSupport="true" 
-                                update="messages1 importtabelanazwy"
+                                update="messages1 importtabelataxually"
                                 validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
                                 fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"
                                 uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
@@ -37,23 +37,23 @@
 
                 </p:panelGrid>
                 <p:panelGrid layout="tabular" columns="2" style="margin-left: 30px;">
-                    <p:commandButton value="zaksięguj WDT/WNT" update="importtabelanazwy" actionListener="#{amazonImportNazwy.zaksiegujWDTjpk}"/>
+                    <p:commandButton value="zaksięguj WDT/WNT" update="importtabelataxually" actionListener="#{amazonTaxually.zaksiegujWDTjpk}"/>
                     
                 </p:panelGrid>
             </p:panelGrid>
         </h:form>
-        <h:form id="importtabelanazwy">
+        <h:form id="importtabelataxually">
             <p:panel header="Lista faktur kontrahenci incydentalni pobranych za miesiąc bieżący"/>
-            <p:dataTable lazy="false"  value="#{amazonImportNazwy.lista}" var="itemikjpk" rowIndexVar="indexjpk" sortBy="#{itemikjpk.dataSprzedazy}"
-                         style="width: 1350px; height: 500px; overflow-y: scroll" 
+            <p:dataTable lazy="false"  value="#{amazonTaxually.lista}" var="itemikjpk" rowIndexVar="indexjpk" sortBy="#{itemikjpk.dataSprzedazy}"
+                         style="width: 1400px; height: 500px; overflow-y: scroll" 
                          >
                 <p:column style="width: 50px;">
                     <h:outputText value="#{indexjpk+1}"/>
                 </p:column>
-                <p:column headerText="data wystawienia" width="60">
+                <p:column headerText="data wystawienia" width="70">
                     <h:outputText value="#{itemikjpk.dataWystawienia}"/>
                 </p:column>
-                <p:column headerText="data sprzedaży" width="60">
+                <p:column headerText="data sprzedaży" width="70">
                     <h:outputText value="#{itemikjpk.dataSprzedazy}"/>
                 </p:column>
                 <p:column headerText="nazwa" width="250" sortBy="#{itemikjpk.nazwaKontrahenta}" filterBy="#{itemikjpk.nazwaKontrahenta}" filterMatchMode="contains">
@@ -62,7 +62,7 @@
                 <p:column headerText="nr kontr" width="100" sortBy="#{itemikjpk.nrKontrahenta}" filterBy="#{itemikjpk.nrKontrahenta}"  filterMatchMode="contains">
                     <h:outputText value="#{itemikjpk.nrKontrahenta}"/>
                 </p:column>
-                <p:column headerText="serial" width="300" sortBy="#{itemikjpk.serial}" filterBy="#{itemikjpk.serial}"  filterMatchMode="contains">
+                <p:column headerText="serial" width="200" sortBy="#{itemikjpk.serial}" filterBy="#{itemikjpk.serial}"  filterMatchMode="contains">
                     <h:outputText value="#{itemikjpk.serial}"/>
                 </p:column>
                 <p:column headerText="wartość netto wal"  sortBy="#{itemikjpk.netto}">
@@ -84,7 +84,7 @@
                     <h:outputText value="#{itemikjpk.wnt eq true ? '&#x2713;':''}" style="color: green;"/>
                 </p:column>
                 <p:column headerText="" style="text-align: center;">
-                    <p:commandButton icon="ui-icon-trash" actionListener="#{amazonImportNazwy.usun(itemikjpk)}" update="@parent:@parent"/>
+                    <p:commandButton icon="ui-icon-trash" actionListener="#{amazonTaxually.usun(itemikjpk)}" update="@parent:@parent"/>
                 </p:column>
             </p:dataTable>
 
