--- a/npkpir_23/web/wspolny/sub/fakturarozrachunki.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrachunki.xhtml
@@ -5,7 +5,7 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     >
-    <p:tabView id="akordeon" style="max-width: 1760px; min-width: 900px;" activeIndex="#{fakturaRozrachunkiAnalizaView.aktywnytab}">
+    <p:tabView id="akordeon" style="max-width: 1760px;" activeIndex="#{fakturaRozrachunkiAnalizaView.aktywnytab}">
        <ui:include src="fakturarozrach/faktura_import.xhtml"/>
        <ui:include src="fakturarozrach/faktura_rozrachunki.xhtml"/>
        <ui:include src="fakturarozrach/faktura_rozrach_przeglad.xhtml"/>
