--- a/npkpir_23/web/wspolny/wspolnyFakturaRozrachunki.xhtml
+++ b/npkpir_23/web/wspolny/wspolnyFakturaRozrachunki.xhtml
@@ -13,49 +13,49 @@
 
              <f:view>
             <bcf:ajaxs/>
-                <div class="flex flex-column min-h-screen">
-                    <!-- panel północny -->
-                    <div class="col-12">
-                        <ui:include src="sub/layoutNowy/north.xhtml"/>
-                    </div>
+               <div class="flex flex-column min-h-screen">
+    <!-- panel północny -->
+    <div class="col-12">
+        <ui:include src="sub/layoutNowy/north.xhtml"/>
+    </div>
 
-                    <!-- główna zawartość strony -->
-                    <div class="flex-grow-1 grid grid-nogutter">
-                        <!-- panel zachodni -->
-                        <div class="col-12 md:col-4 lg:col-3"  style="max-width: 260px;">
-                            <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>   <!-- panel zachodni-->
-                        </div>
+    <!-- główna zawartość strony -->
+    <div class="flex-grow-1 flex">
+        <!-- panel zachodni -->
+        <div class="col-12 md:col-4 lg:col-3" style="max-width: 200px;" id="zachod">
+            <ui:include src="#{pozycjeNaFakturzeView.westustawienia}"/>
+        </div>
 
-                        <!-- panel centralny -->
-                        <div class="col-12 md:col-9 lg:col-10 flex">
-                            <div class="vertical-container">
-                                
-                               <p:panel toggleable="true" closable="true" style="width: 1000px;"  rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
-                                    <f:facet name="header">
-                                        <h:outputText value="Strona służy do księgowania zapłat za faktury dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF} i przeglądania rozrachunków"/>
-                                    </f:facet>
-                                </p:panel>
-                                  <h:form id="zmianaokresuguest">
-                                    <p:panelGrid layout="tabular" columns="2" style="padding: 10px;">
-                                        <h:outputText value="okres rozliczeniowy: " />
-                                        <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;margin-left: 10px;" converter="#{okresConverter}">
-                                            <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
-                                            <p:ajax event="change" partialSubmit="true" listener="#{fakturaRozrachunkiView.aktualizuj}" global="true" 
-                                                    update="@(form)"/>
-                                        </p:selectOneMenu>
-                                    </p:panelGrid>
-                                </h:form>
-                                <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
-                            <ui:include src="sub/fakturarozrachunki.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                            </div>
-                        </div>
-                    </div>
+        <!-- panel enter po prawej stronie panelu zachodniego -->
+        <div class="col-12 md:col-8 lg:col-9" id="enter">
+            <div class="vertical-container">
+                <p:panel toggleable="true" closable="true" style="max-width: 1800px;" rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
+                    <f:facet name="header">
+                        <h:outputText value="Strona służy do księgowania zapłat za faktury dla firmy #{WpisView.podatnikObiekt.nazwapelnaPDF} i przeglądania rozrachunków"/>
+                    </f:facet>
+                </p:panel>
+                <h:form id="zmianaokresuguest">
+                    <p:panelGrid layout="tabular" columns="2" style="padding: 10px;">
+                        <h:outputText value="okres rozliczeniowy: " />
+                        <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}" style="width: 100px;margin-left: 10px;" converter="#{okresConverter}">
+                            <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                            <p:ajax event="change" partialSubmit="true" listener="#{fakturaRozrachunkiView.aktualizuj}" global="true" 
+                                    update="@(form)"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                </h:form>
+                <ui:include src="sub/menu_wiad.xhtml"/> <!-- menu contextowe i pole wiadomosci growl -->
+                <ui:include src="sub/fakturarozrachunki.xhtml"/> <!-- właściwa tablica z danymi z księgi -->
+            </div>
+        </div>
+    </div>
 
-                    <!-- panel południowy (footer) -->
-                    <div class="col-12">
-                        <ui:include src="sub/layoutNowy/south.xhtml"/>
-                    </div>
-                </div>
+    <!-- panel południowy (footer) -->
+    <div class="col-12">
+        <ui:include src="sub/layoutNowy/south.xhtml"/>
+    </div>
+</div>
+
             </f:view>
         </ui:define>
     </ui:composition>
