--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
@@ -158,7 +158,7 @@
                     <ui:include src="sub/dialog/dialog_importamazoncsv.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazoncsv_nazwy.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importtaxuallyxls.xhtml"/>
-<!--                    <ui:include src="sub/dialog/dialog_importbaselinker.xhtml"/>-->
+                    <ui:include src="sub/dialog/dialog_importbaselinker.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazon_intrastat.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazoncsvebay.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importbank.xhtml"/>
