--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importbaselinker.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importbaselinker.xhtml
@@ -15,78 +15,86 @@
         }
     </style>
 
-    <p:dialog id="importamazonTaxually" header="Zestawienie pobranych faktur dla Amazon WNT/WDT TAXUALLY" widgetVar="importamazonTaxually" height="900" width="1450"
-              resizable="false"  onShow="ustawdialog('importamazonTaxually','menudokumenty',1450,900);" closeOnEscape="true" onHide="resetujdialog('importamazonTaxually');" >
-        <p:ajax event="open" listener="#{amazonTaxually.init()}" update="importtabelataxually"/>
+    <p:dialog id="importamazonBaselinker" header="Zestawienie pobranych faktur dla OSS Baselinker" widgetVar="importamazonBaselinker" height="900" width="1450"
+              resizable="false"  onShow="ustawdialog('importamazonBaselinker','menudokumenty',1450,900);" closeOnEscape="true" onHide="resetujdialog('importamazonBaselinker');" >
+        <p:ajax event="open" listener="#{amazonBaselinker.init()}" update="importtabelabaselinker"/>
         <bcf:ajaxs/>
-        <h:outputText value="import dokumentów WDT/WNT z pliku TAXUALLY"/>
+        <h:outputText value="import dokumentów OSS z pliku BASELINKER"/>
         <h:form>
             <p:growl life="3600"  id="messages1"/>
             <p:panelGrid layout="tabular" columns="2">
                 <p:panelGrid layout="tabular" columns="1">
-                  <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonTaxually.importujsprzedaz}"
-                                mode="advanced" dragDropSupport="true" 
-                                update="messages1 importtabelataxually"
-                                validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
-                                fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"
-                                uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
-                                onstart="PF('dialogAjaxCzekaj').show();" style="height: 100px;"
-                                auto="true" oncomplete="PF('dialogAjaxCzekaj').hide(); $('#idTwojegoUploadu input[type=file]').val('');"
->
-                  </p:fileUpload>
+                    <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonBaselinker.importujsprzedaz}"
+                                  mode="advanced" dragDropSupport="true" 
+                                  update="messages1 importtabelabaselinker"
+                                  validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
+                                  fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"
+                                  uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
+                                  onstart="PF('dialogAjaxCzekaj').show();" style="height: 100px;"
+                                  auto="true" oncomplete="PF('dialogAjaxCzekaj').hide(); $('#idTwojegoUploadu input[type=file]').val('');"
+                                  >
+                    </p:fileUpload>
 
                 </p:panelGrid>
                 <p:panelGrid layout="tabular" columns="2" style="margin-left: 30px;">
-                    <p:commandButton value="zaksięguj WDT/WNT" update="importtabelataxually" actionListener="#{amazonTaxually.zaksiegujWDTjpk}"/>
-                    
+                    <p:commandButton value="drukuj" actionListener="#{amazonBaselinker.drukuj}"/>
+
                 </p:panelGrid>
             </p:panelGrid>
         </h:form>
-        <h:form id="importtabelataxually">
+        <h:form id="importtabelabaselinker">
             <p:panel header="Lista faktur kontrahenci incydentalni pobranych za miesiąc bieżący"/>
-            <p:dataTable lazy="false"  value="#{amazonTaxually.lista}" var="itemikjpk" rowIndexVar="indexjpk" sortBy="#{itemikjpk.dataSprzedazy}"
-                         style="width: 1400px; height: 500px; overflow-y: scroll" 
-                         >
-                <p:column style="width: 50px;">
-                    <h:outputText value="#{indexjpk+1}"/>
+            <p:dataTable lazy="false" value="#{amazonBaselinker.lista}" var="itemikjpk" rowIndexVar="indexjpk" sortBy="#{itemikjpk.lp}"
+                         style="max-width: 1400px; height: 500px; overflow-y: scroll" rowKey="#{itemikjpk.lp}">
+                <p:column width="30">
+                    <h:outputText value="#{itemikjpk.id}" />
                 </p:column>
-                <p:column headerText="data wystawienia" width="70">
-                    <h:outputText value="#{itemikjpk.dataWystawienia}"/>
+                <p:column headerText="Pełny Numer" sortBy="#{itemikjpk.pelnyNumer}" filterBy="#{itemikjpk.pelnyNumer}" filterMatchMode="contains">
+                    <h:outputText value="#{itemikjpk.pelnyNumer}" />
                 </p:column>
-                <p:column headerText="data sprzedaży" width="70">
-                    <h:outputText value="#{itemikjpk.dataSprzedazy}"/>
+
+                <p:column headerText="Nabywca" width="200" sortBy="#{itemikjpk.nabywca}" filterBy="#{itemikjpk.nabywca}" filterMatchMode="contains">
+                    <h:outputText value="#{itemikjpk.nabywca}" />
                 </p:column>
-                <p:column headerText="nazwa" width="250" sortBy="#{itemikjpk.nazwaKontrahenta}" filterBy="#{itemikjpk.nazwaKontrahenta}" filterMatchMode="contains">
-                    <h:outputText value="#{itemikjpk.nazwaKontrahenta}" style="color: #{itemikjpk.nazwaKontrahenta eq 'brak' ? 'green':'initial'}"/>
+
+                <p:column headerText="Data Wystawienia" sortBy="#{itemikjpk.dataWystawienia}" filterBy="#{itemikjpk.dataWystawienia}" filterMatchMode="contains">
+                    <h:outputText value="#{itemikjpk.dataWystawienia}" />
                 </p:column>
-                <p:column headerText="nr kontr" width="100" sortBy="#{itemikjpk.nrKontrahenta}" filterBy="#{itemikjpk.nrKontrahenta}"  filterMatchMode="contains">
-                    <h:outputText value="#{itemikjpk.nrKontrahenta}"/>
+
+                <p:column headerText="Data Sprzedaży" sortBy="#{itemikjpk.dataSprzedazy}" filterBy="#{itemikjpk.dataSprzedazy}" filterMatchMode="contains">
+                    <h:outputText value="#{itemikjpk.dataSprzedazy}" />
                 </p:column>
-                <p:column headerText="serial" width="200" sortBy="#{itemikjpk.serial}" filterBy="#{itemikjpk.serial}"  filterMatchMode="contains">
-                    <h:outputText value="#{itemikjpk.serial}"/>
+
+                <p:column headerText="Netto" sortBy="#{itemikjpk.netto}" filterBy="#{itemikjpk.netto}">
+                    <bcf:outputwal value="#{itemikjpk.netto}"/>
                 </p:column>
-                <p:column headerText="wartość netto wal"  sortBy="#{itemikjpk.netto}">
-                    <bcf:outputpl value="#{itemikjpk.nettowaluta}"/>
+
+                <p:column headerText="VAT" sortBy="#{itemikjpk.vat}" filterBy="#{itemikjpk.vat}">
+                    <bcf:outputwal value="#{itemikjpk.vat}" />
                 </p:column>
-                <p:column headerText="wartość netto"  sortBy="#{itemikjpk.netto}">
-                    <bcf:outputpl value="#{itemikjpk.netto}"/>
+
+                <p:column headerText="Kwota VAT" sortBy="#{itemikjpk.kwotaVat}" filterBy="#{itemikjpk.kwotaVat}">
+                    <bcf:outputwal value="#{itemikjpk.kwotaVat}" />
                 </p:column>
-                <p:column headerText="wartość vat"  sortBy="#{itemikjpk.vat}">
-                    <bcf:outputpl value="#{itemikjpk.vat}"/>
+
+                <p:column headerText="Brutto" sortBy="#{itemikjpk.brutto}" filterBy="#{itemikjpk.brutto}">
+                    <bcf:outputwal value="#{itemikjpk.brutto}" />
                 </p:column>
-                <p:column headerText="vat stawka"  sortBy="#{itemikjpk.vat}">
-                    <bcf:outputplprocent value="#{itemikjpk.stawkavat}"/>
+
+                <p:column headerText="Waluta" width="30" sortBy="#{itemikjpk.waluta}" filterBy="#{itemikjpk.waluta}">
+                    <h:outputText value="#{itemikjpk.waluta}" />
                 </p:column>
-                <p:column headerText="WDT" style="text-align: center;">
-                    <h:outputText value="#{itemikjpk.wdt eq true ? '&#x2713;':''}" style="color: green;"/>
+
+                <p:column headerText="Kurs Waluty" sortBy="#{itemikjpk.kursWaluty}" filterBy="#{itemikjpk.kursWaluty}">
+                    <bcf:outputkurs value="#{itemikjpk.kursWaluty}" />
                 </p:column>
-                <p:column headerText="WNT" style="text-align: center;">
-                    <h:outputText value="#{itemikjpk.wnt eq true ? '&#x2713;':''}" style="color: green;"/>
+
+                <p:column headerText="Kraj" sortBy="#{itemikjpk.kraj}" filterBy="#{itemikjpk.kraj}" filterMatchMode="contains">
+                    <h:outputText value="#{itemikjpk.kraj}" />
                 </p:column>
-                <p:column headerText="" style="text-align: center;">
-                    <p:commandButton icon="ui-icon-trash" actionListener="#{amazonTaxually.usun(itemikjpk)}" update="@parent:@parent"/>
-                </p:column>
+
             </p:dataTable>
+
 
         </h:form>
 
