--- a/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
@@ -91,6 +91,7 @@
                     <p:menuitem value="importuj plik Amazon CSV" oncomplete="PF('importamazoncsv').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon Additional Temp. WNT/WDT" oncomplete="PF('importamazoncsvnazwy').show();" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon Taxually WNT/WDT" oncomplete="PF('importamazonTaxually').show();" ></p:menuitem>
+                    <p:menuitem value="importuj plik Amazon Baselinker OSS" oncomplete="PF('importamazonBaselinker').show();" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon CSV - Ebay" oncomplete="PF('importamazoncsvebay').show();" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon - Intrastat" oncomplete="PF('importamazonintrastat').show();" ></p:menuitem>
                     <p:menuitem value="importuj plik JPK_VAT" oncomplete="PF('importjpkfa').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
