--- a/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/dialog_nowyklient_faktura.xhtml
@@ -37,13 +37,13 @@
                         <p:ajax event="select" partialSubmit="true" global="false"/>
                     </p:autoComplete>
                 </p:panelGrid>
-                <p:panelGrid layout="tabular" id="polawprowadzania2" columns="6"  style="width: 100%;">
+                <p:panelGrid layout="tabular" id="polawprowadzania2" columns="5"  style="width: 100%;">
                     <h:outputLabel value="ulica" style="font-weight: 700"/>
                     <h:outputLabel value="dom" style="font-weight: 700"/>
                     <h:outputLabel value="lokal" style="font-weight: 700"/>
                     <h:outputLabel value="kraj" style="font-weight: 700"/>
                     <h:outputLabel value="email" style="font-weight: 700"/>
-                     <h:outputLabel value="" style="font-weight: 700"/>
+                     
                     <p:inputText id="ulicaPole" value="#{KlView.selected.ulica}"   style="width: 200px" required="true" requiredMessage="Pole ulica nie może byc puste"
                                  onblur="wykresllokal_wykazklientow_dialog('formnkfaktura:ulicaPole');"/>
                     <p:inputText id="domPole" value="#{KlView.selected.dom}" style="width: 200px" required="true" requiredMessage="Pole dom nie może byc puste"
@@ -63,7 +63,10 @@
                     <p:inputText id="emailPole" value="#{KlView.selected.email}" style="width: 200px" >
 <!--                        <p:ajax event="focus" listener="#{KlView.dodajpustegomaila}"/>-->
                     </p:inputText>
-                    <p:commandButton value="dodaj" action="#{KlView.dodajKlienta}" update="akordeon:formstworz" oncomplete="skopiujdanenowegoklientanowafaktura();" style="width: 120px;display: none;"  styleClass="uibuttonmui"/>
+                </p:panelGrid>
+                <p:panelGrid layout="tabular" id="polawprowadzania3" columns="6"  style="width: 100%;">
+                    <p:commandButton value="dodaj" action="#{KlView.dodajKlientaFaktura(fakturaView.selected)}"
+                                     update="akordeon:formstworz" oncomplete="skopiujdanenowegoklientanowafaktura();" style="width: 120px;display: none;"  styleClass="uibuttonmui"/>
                 </p:panelGrid>
             </p:panel>
         </h:form>
