--- a/npkpir_23/web/manager/sub/rodzajedok.xhtml
+++ b/npkpir_23/web/manager/sub/rodzajedok.xhtml
@@ -61,7 +61,6 @@
                 </p:column>
                 <p:column headerText="% VAT" width="30" style="text-align: right;">
                     <h:outputText value="#{loop.procentvat}" rendered="#{loop.procentvat gt 0}">
-                        <f:convertNumber integerOnly="true"/>
                     </h:outputText>
                 </p:column>
                 <p:column headerText="stawka VAT" width="30" style="text-align: right;">
@@ -187,10 +186,9 @@
                 <f:selectItem itemLabel="#{mgs.płatności}" itemValue="0"/>
             </h:selectOneMenu>
             <h:outputText value=" procent VAT**: " />
-            <p:inputText value="#{rodzajedokView.wprowadzany.procentvat}" maxlength="2" validatorMessage="Wprowadz procent od 1 do 99">
-                <f:validateLongRange minimum="0" maximum="99"/>
-                <f:convertNumber integerOnly="true" type="number" />
-            </p:inputText>
+            <p:inputNumber value="#{rodzajedokView.wprowadzany.procentvat}" maxlength="2" validatorMessage="Wprowadz procent od 1 do 99" maxValue="100" minValue="0">
+                
+            </p:inputNumber>
             <h:outputText value=" stawka VAT***: " />
             <p:inputText value="#{rodzajedokView.wprowadzany.stawkavat}" maxlength="2" validatorMessage="Wprowadz procent od 1 do 99">
                 <f:validateLongRange minimum="0" maximum="99"/>
