--- a/npkpir_23/web/wspolny/sub/wykazklientow.xhtml
+++ b/npkpir_23/web/wspolny/sub/wykazklientow.xhtml
@@ -92,7 +92,7 @@
                              paginatorTemplate="{FirstPageLink} {PageLinks} {LastPageLink} {RowsPerPageDropdown}" 
                              rowsPerPageTemplate="12, 20,28,36,50" filteredValue="#{KlView.klienciFiltered}"
                              rowKey="#{wpis.id}" selection="#{KlView.selectedtabela}" 
-                             emptyMessage="Nie ma klientów" style=" max-width: 1400px;overflow-y: scroll;">
+                             emptyMessage="Nie ma klientów" style="width: 1200px;overflow-y: scroll;">
                     <p:ajax event="rowSelectRadio" listener="#{KlView.wybranodoedycji}" update=":formY :formX" global="false"/>
                     <p:ajax event="filter" global="false"/>
                     <f:facet name="header">  
